--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				</div>
 				<div class="input">
 					<label>Egilea(k): </label>
-					<input type='text' id='egilea' size="80">
+					<input type='text' id='egilea' size="50">
 				</div>
 				<div class="input">
 					<label>Data: </label>
@@ -36,9 +36,9 @@
 				<input type='button' value='>>' id='aurrera'>
 				<input type='button' value='Bilatu' id='bilatu'>
 			</div>
+			<div class="oina">Liburuak datubasean: <span id="libKop"></span></div>
 	    </form>
 	  </div>
-
 	</div>
 
     </body>
